清理 Trinity 规划与样板面板内部状态 (#249)